package oxberryPis;

message StockEvent {
  required int32 stock_id = 1;
  required int32 timestamp = 2;
  required int32 pi_id = 3;
  required bool is_end =7;
  optional int32 top_buy_price = 4;
  optional int32 top_sell_price =5;
  optional int32 tradePrice = 6;    
}

message OrderBookMessage {
  required int32 stock_id = 1;
  required int32 timestamp = 2;

}

